User Story 1.1 fixed some products being distorted

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -78,6 +78,11 @@ body {
     z-index: -1;
 }
 
+.img {
+    object-fit: contain;
+    height: 20rem;
+}
+
 
 /* -------------------------------- Media Queries */
 
